--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     </header>
 
     <nav>
-        <a href="index.html">Home</a>
-        <a href="index.html#about">About</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
         <a href="Downloads.html">Downloads</a>
         <a href="Contact.html">Contact</a>
         <a href="Rules.html">ToS</a>
