--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -36,8 +36,8 @@
         </header>
 
         <nav>
-            <a href="Home.html">Home</a>
-            <a href="Home.html#about">About</a>
+            <a href="index.html">Home</a>
+            <a href="index.html #about">About</a>
             <a href="Downloads.html">Downloads</a>
             <a href="Contact.html">Contact</a>
             <a href="Rules.html">ToS</a>
