--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -36,8 +36,8 @@
         </header>
 
         <nav>
-            <a href="samuraibreadofficial.github.io/">Home</a>
-            <a href="samuraibreadofficial.github.io/#about">About</a>
+            <a href="https://samuraibreadofficial.github.io/">Home</a>
+            <a href="https://samuraibreadofficial.github.io/#about">About</a>
             <a href="Downloads.html">Downloads</a>
             <a href="Contact.html">Contact</a>
             <a href="Rules.html">ToS</a>
