MOREEEEEEEEEEE CHANGES JEEEEEEEEEEZ

--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -56,4 +56,8 @@
                 <p>Inspired by the spirit of the "Origins Mod," this add-on delivers fresh gameplay, endless roleplay potential, and a whole new way to experience Minecraft. Dive in, choose your race, and let your story begin!</p>
             </div>
         </section>
+        <footer>
+            &copy; 2025 SamuraiBread. All rights reserved.
+        </footer>
+    </body>    
 </html>
