--- a/Downloads.html
+++ b/Downloads.html
@@ -152,19 +152,19 @@
         <a href="Rules.html">ToS</a>
     </nav>
 
-    <section id="downloads">
+    <section id="endfallensraces">
         <h2>Downloads</h2>
         <p>Choose an addon to download:</p>
     
         <!-- Addon 1 -->
         <div style="text-align: center; margin-bottom: 40px;">
-            <img src="Images/era.png" alt="Endfallen's Races Thumbnail" style="width: 450px; border-radius: 12px;">
+            <img src="Images/era.png" alt="Endfallen's Races Thumbnail" style="width: 100%; max-width: 650px; height: auto; border-radius: 12px;">
             <h3>Endfallen's Races v1.0.1</h3>
             <p>Endfallen's Races adds Elves, Dwarfs, Avians, Felines, powerful gear & more! By SamuraiBread for EndfallenSMP (MC:BE RP Realm).</p>
             <a href="endfallensraces.html" class="download-btn">Go To Download</a>
         </div>    
     </section>
-    
+
     <footer>
         &copy; 2025 SamuraiBread. All rights reserved.
     </footer>
