--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
     <meta charset="UTF-8">
     <title>SamuraiBread's Addons</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content="SamuraiBread's Addons">
+    <meta property="og:description" content="High-quality Minecraft: Bedrock Edition addons by SamuraiBread.">
+    <meta property="og:image" content="https://samuraibreadofficial.github.io/Images/logo.png">
+    <meta property="og:url" content="https://samuraibreadofficial.github.io/">
+    <meta property="og:type" content="website">
+
+    <!-- Twitter (też czytane przez Discord) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="SamuraiBread's Addons">
+    <meta name="twitter:description" content="Discover custom addons and content for EndfallenSMP and beyond.">
+    <meta name="twitter:image" content="https://samuraibreadofficial.github.io/Images/logo.png">
+
     <link rel="icon" href="Images/logo.png" type="icon">
+    
     <style>
         * {
             box-sizing: border-box;
