--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="twitter:image" content="https://samuraibreadofficial.github.io/Images/logo.png">
 
     <link rel="icon" href="Images/logo.png" type="icon">
-    
+
     <style>
         * {
             box-sizing: border-box;
@@ -151,6 +151,7 @@
             }
         }
     </style>
+    <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
 </head>
 <body>
     <header>
