--- a/Rules.html
+++ b/Rules.html
@@ -136,6 +136,7 @@
             }
         }
     </style>
+        <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
 </head>
 <body>
     <header>
