--- a/Contact.html
+++ b/Contact.html
@@ -107,10 +107,11 @@
     
         /* === Responsywność === */
         @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-                gap: 10px;
-            }
+    nav {
+        flex-wrap: wrap;
+        gap: 10px;
+        justify-content: center;
+    }
     
             header h1 {
                 font-size: 1.5rem;
