Fixed Endfallens Races Page

--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Endfallen's Races</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="images/pack_icon.png" type="icon">
+        <link rel="icon" href="Images/pack_icon.png" type="icon">
         <style>
             * {
                 box-sizing: border-box;
@@ -141,7 +141,7 @@
         </head>
     <body>
         <header>
-        <img src="images/pack_icon.png" alt="Endfallens Races Logo">
+        <img src="Images/pack_icon.png" alt="Endfallens Races Logo">
         <h1 style="color: #3a0055;">Endfallen's Races</h1>
         </header>
 
