--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -154,9 +154,9 @@
         </nav>
         
         <section id="endfallensraces">
-            <div style="text-align: center; margin-bottom: 40px;">
+            <div style="text-align: left; margin-bottom: 40px;">
                 <img src="Images/era.png" alt="Endfallen's Races Thumbnail" style="width: 650px; border-radius: 12px;">
-                <h1 style="color: #3a0055;">About</h1>
+                <h1 style="color: #3a0055; text-align: center;">About</h1>
                 <p>Discover the world of <strong>Endfallen's Races</strong> — an exciting add-on that brings unique, playable races into your game:</p>
                 <p>- Elves</p>
                 <p>- Dwarves</p>
