--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -162,7 +162,9 @@
             <a href="Contact.html">Contact</a>
             <a href="Rules.html">ToS</a>
         </nav>
-        
+        <section id="skip">
+            <a href="#changes" style="text-align: center; text-decoration: solid;">Skip To Downloads</a>
+        </section>
         <section id="endfallensraces">
             <div style="display: flex; justify-content: center; align-items: center;">
                 <img src="Images/era.png" alt="Endfallen's Races Thumbnail" style="width: 100%; max-width: 650px; height: auto; border-radius: 12px;">
