Added Downloads, Released ER 1.0

--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -212,8 +212,8 @@
             <li>Fixed Hammer Recipe Not Showing Up In The Crafting Table</li>
             </div>
             <div style="text-align: center;">
-            <a href="" class="download-btn">Download .mcaddon</a>
-            <a href="" class="download-btn">Download .zip</a>
+            <a href="addon-downloads/era/Endfallen's Races.mcaddon" class="download-btn">Download .mcaddon</a>
+            <a href="addon-downloads/era/Endfallen's Races.zip" class="download-btn">Download .zip</a>
             </div>
         </section>
         <footer>
