--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -212,12 +212,35 @@
             <li>Fixed Hammer Recipe Not Showing Up In The Crafting Table</li>
             </div>
             <div style="text-align: center;">
-            <a href="addon-downloads/era/Endfallen's Races.mcaddon" class="download-btn">Download .mcaddon</a>
+            <a href="https://link-target.net/1345049/addon-download-er" class="download-btn">Download .mcaddon</a>
             <a href="addon-downloads/era/Endfallen's Races.zip" class="download-btn">Download .zip</a>
             </div>
+            <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    /*
+    var disqus_config = function () {
+    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    */
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://samuraibread.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+<div>
+    <a href="commentpolicy.html" class="download-btn">Comment Policy</a>
+</div>
         </section>
         <footer>
             &copy; 2025 SamuraiBread. All rights reserved.
         </footer>
+        <script id="dsq-count-scr" src="//samuraibread.disqus.com/count.js" async></script>
     </body>    
 </html>
