--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -235,7 +235,7 @@
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 <div>
-    <a href="commentpolicy.html" class="download-btn">Comment Policy</a>
+    <a href="commentpolicy.html" class="download-btn" target="_blank">Comment Policy</a>
 </div>
         </section>
         <footer>
