--- a/endfallensraces.html
+++ b/endfallensraces.html
@@ -215,6 +215,8 @@
             <a href="https://link-target.net/1345049/addon-download-er" class="download-btn">Download .mcaddon</a>
             <a href="addon-downloads/era/Endfallen's Races.zip" class="download-btn">Download .zip</a>
             </div>
+        </section>
+        <section id="comments" style="border-radius: 10px;">
             <div id="disqus_thread"></div>
 <script>
     /**
