--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
             padding: 40px 20px;
             max-width: 1000px;
             margin: auto;
+            margin-top: 20px;
+            background-color: #2b2b2b;
+            text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
+            transition: background-color 1s ease;
+        }
+        
+        section:hover {
+            background-color: #2d2626;
         }
     
         h2 {
