--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     </head>
     <body>
         <header>
-            <img src="images/logo.png" alt="SamuraiBread's Little Corner">
+            <img src="./Images/logo.png" alt="SamuraiBread's Little Corner">
         </header>
         <!--Place for <nav>-->
             <nav>
