--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
                 border-bottom-right-radius: 20px;
             }
 
+            nav a {
+                color: white;
+                text-decoration: none;
+                transition: color 0.3s ease-in-out;
+            }
+
+            nav a:hover {
+                color: aqua;
+            }
+
             .highlighted-text {
                 color: yellow;
             }
@@ -81,7 +91,7 @@
         </header>
         <!--Place for <nav>-->
             <nav>
-                <a>Home Page</a>
+                <a href="#Start">Home Page</a>
                 <a>Server</a>
                 <a>Addons</a>
                 <a>My Stories</a>
@@ -107,5 +117,18 @@
                     <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become it's new replacement. The story, server itself and addon is still under development.</p>
                 </div>
             </section>
+        <section id="LatestVideo">
+                <h1>Latest Video</h1>
+                <p>Check out our latest trailer for HiraethSMP!</p>
+                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
+                <iframe src="https://www.youtube.com/watch?v=Yx8as2HKqWU"
+                title="Tree Building Timelapse. ( IDK why but that's cool )| HiraethSMP"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                allowfullscreen
+                style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                </iframe>
+                </div>
+        </section>
     </body>
 </html>
