--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <h1>Latest Video</h1>
                 <p>Check out our latest trailer for HiraethSMP!</p>
                 <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
-                <iframe src="https://www.youtube.com/watch?v=Yx8as2HKqWU"
+                <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
                 title="Tree Building Timelapse. ( IDK why but that's cool )| HiraethSMP"
                 frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
