--- a/index.html
+++ b/index.html
@@ -1,134 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Samurai's Little Corner</title>
-        <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <title>Samurai's Little Corner</title>
+    <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <style>
-            html {
-                scroll-behavior: smooth;
-            }
+    <style>
+        html {
+            scroll-behavior: smooth;
+        }
 
-            body {
-                margin: 0;
-                font-family: sans-serif;
-                background-color: rgb(0, 0, 0);
-                color: white;
-                text-shadow: 
-                -2px -2px black,
-                2px -2px black,
-                -2px 2px black,
-                2px 2px black;
-            }
+        body {
+            margin: 0;
+            font-family: sans-serif;
+            background-color: rgb(0, 0, 0);
+            color: white;
+            text-shadow: -2px -2px black, 2px -2px black, -2px 2px black, 2px 2px black;
+        }
 
-            header {
-                background: linear-gradient(to bottom, rgb(20, 24, 14), #342f43);
-                padding: 20px 10px;
-                text-align: center;
-                box-shadow: 0 5px 5px rgba(0,0,0,0.5);
-            }
+        header {
+            background: linear-gradient(to bottom, rgb(20, 24, 14), #342f43);
+            padding: 20px 10px;
+            text-align: center;
+            box-shadow: 0 5px 5px rgba(0,0,0,0.5);
+        }
 
-            header img {
-                width: 100%;
-                max-width: 500px;
-                height: auto;
-                border-radius: 8px;
-            }
+        header img {
+            width: 100%;
+            max-width: 500px;
+            height: auto;
+            border-radius: 8px;
+        }
 
-            @keyframes bounce-up {
-                0%   { transform: translateY(0); }
-                30%  { transform: translateY(-10px); }
-                60%  { transform: translateY(0); }
-                100% { transform: translateY(0); }
-            }
+        @keyframes bounce-up {
+            0%   { transform: translateY(0); }
+            30%  { transform: translateY(-10px); }
+            60%  { transform: translateY(0); }
+            100% { transform: translateY(0); }
+        }
 
+        section {
+            padding: 40px 50px;
+            max-width: 1000px;
+            margin: auto;
+            margin-top: 20px;
+            background-color: #1f1c28;
+            text-align: center;
+            box-shadow: 5px 5px 5px #342f43;
+            border-radius: 10px;
+            transition: padding 0.5s ease;
+        }
+
+        section:hover {
+            animation: bounce-up 0.5s ease-out;
+            padding: 45px 55px;
+        }
+
+        nav {
+            background-color: #342f43;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 30px;
+            border-bottom-left-radius: 20px;
+            border-bottom-right-radius: 20px;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            transition: color 0.3s ease-in-out;
+        }
+
+        nav a:hover {
+            color: aqua;
+        }
+
+        .highlighted-text {
+            color: yellow;
+        }
+
+        /* MINI PLAYER */
+        #mini-player {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            width: 300px;
+            height: 169px;
+            z-index: 9999;
+            box-shadow: 0 0 10px rgba(0,0,0,0.7);
+            border-radius: 8px;
+            overflow: hidden;
+        }
+
+        #mini-player iframe {
+            width: 100%;
+            height: 100%;
+            border: none;
+        }
+
+        #mini-player button {
+            position: absolute;
+            top: 5px;
+            right: 5px;
+            z-index: 10000;
+            background: none;
+            border: none;
+            color: white;
+            font-weight: bold;
+            font-size: 16px;
+            cursor: pointer;
+            text-shadow: none;
+        }
+
+        #restore-button {
+            position: fixed;
+            bottom: 20px;
+            left: 20px;
+            z-index: 9998;
+            background-color: #342f43;
+            color: white;
+            font-size: 20px;
+            border: none;
+            padding: 8px 12px;
+            border-radius: 8px;
+            cursor: pointer;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+            display: none;
+        }
+
+        #restore-button:hover {
+            background-color: #444;
+        }
+
+        @media (max-width: 600px) {
             section {
-                padding: 40px 50px;
-                max-width: 1000px;
-                margin: auto;
-                margin-top: 20px;
-                background-color: #1f1c28;
-                text-align: center;
-                box-shadow: 5px 5px 5px #342f43;
-                border-radius: 10px;
-                transition: padding 0.5s ease;
-            }
-
-            section:hover {
-                animation: bounce-up 0.5s ease-out;
-                padding: 45px 55px;
+                padding: 20px 15px;
             }
 
             nav {
-                background-color: #342f43;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-                gap: 30px;
-                border-bottom-left-radius: 20px;
-                border-bottom-right-radius: 20px;
+                gap: 15px;
+                padding: 10px 0;
             }
 
             nav a {
-                color: white;
-                text-decoration: none;
-                transition: color 0.3s ease-in-out;
+                font-size: 16px;
+                padding: 8px 10px;
+                flex: 1 1 100%;
+                text-align: center;
+                border-top: 1px solid #555;
             }
 
-            nav a:hover {
-                color: aqua;
+            nav a:first-child {
+                border-top: none;
             }
 
-            .highlighted-text {
-                color: yellow;
+            header img {
+                max-width: 90%;
+                height: auto;
             }
-        </style>
-    </head>
-    <body>
-        <header>
-            <img src="./Images/logo.png" alt="SamuraiBread's Little Corner">
-        </header>
-        <!--Place for <nav>-->
-            <nav>
-                <a href="#Start">Home Page</a>
-                <a>Server</a>
-                <a>Addons</a>
-                <a>My Stories</a>
-            </nav>
 
+            #mini-player, #restore-button {
+                display: none !important;
+            }
+        }
+    </style>
+</head>
+<body>
 
+    <header>
+        <img src="./Images/logo.png" alt="SamuraiBread's Little Corner">
+    </header>
 
-            <h1 style="text-align: center;">Start</h1>
-            <section id="Start">
-                <h1>About</h1>
-                <div>
-                    <p>Hello there!<br>I'm <a href="https://en.namemc.com/profile/SamuraiBread.1" target="_blank" style="text-decoration: none;">SamuraiBread</a> — an addon creator, map designer, and server owner. I love writing spooky, sci-fi, and fantasy stories.<br>So... what is this website actually about?</p>
+    <nav>
+        <a href="#Start">Home Page</a>
+        <a href="#Server">Server</a>
+        <a href="#Addons">Addons</a>
+        <a href="#LatestVideo">Latest Video</a>
+        <a href="#MyStories">My Stories</a>
+    </nav>
+    <h1 style="text-align: center;">Start</h1>
+    <section id="Start">
+        <h1>About</h1>
+        <p>Hello there!<br>I'm <a href="https://en.namemc.com/profile/SamuraiBread.1" target="_blank" style="text-decoration: none;">SamuraiBread</a> — an addon creator, map designer, and server owner. I love writing spooky, sci-fi, and fantasy stories.<br>So... what is this website actually about?</p>
 
-                    <p>Here you'll find my own addons, server information, and even some stories I've written — all available for FREE!<br> I'm just a bit too lazy to post them right now, but hey, everything will be cool.</p>
-                </div>
-                <h1>Addons</h1>
-                <div>
-                    <p>My addons focus on fantasy and mythical styles. In my addons, you will find ores inspired by Greek mythology, such as orichalc and adamantine. I also love Slavic mythology, so some elements of that may appear in my addons.</p>
-                    <p>I enjoy chill vibes, so sometimes I add custom songs to these addons. Occasionally, I rewrite the music system based on the in-game scoreboard, allowing you to adjust it via simple commands. For example: <a class="highlighted-text">/scoreboard players set @s music_vol 1</a> (this sets the music volume to 10%).</p>
-                </div>
-                <h1>Server</h1>
-                <div>
-                    <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become it's new replacement. The story, server itself and addon is still under development.</p>
-                </div>
-            </section>
+        <p>Here you'll find my own addons, server information, and even some stories I've written — all available for FREE!<br> I'm just a bit too lazy to post them right now, but hey, everything will be cool.</p>
+
+        <h1 id="Addons">Addons</h1>
+        <p>My addons focus on fantasy and mythical styles. In my addons, you will find ores inspired by Greek mythology, such as orichalc and adamantine. I also love Slavic mythology, so some elements of that may appear in my addons.</p>
+        <p>I enjoy chill vibes, so sometimes I add custom songs to these addons. Occasionally, I rewrite the music system based on the in-game scoreboard, allowing you to adjust it via simple commands. For example: <a class="highlighted-text">/scoreboard players set @s music_vol 1</a> (this sets the music volume to 10%).</p>
+
+        <h1 id="Server">Server</h1>
+        <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become its new replacement. The story, server itself and addon are still under development.</p>
+    </section>
         <section id="LatestVideo">
-                <h1>Latest Video</h1>
-                <p>Check out our latest Timelapse for HiraethSMP!</p>
-                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
-                <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
-                title="Tree Building Timelapse. ( IDK why but that's cool )| HiraethSMP"
+        <h1>Latest Video</h1>
+        <p>Check out our latest Timelapse for HiraethSMP!</p>
+        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
+            <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
+                    title="Tree Building Timelapse. (IDK why but that's cool) | HiraethSMP"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen
+                    style="position:absolute;top:0;left:0;width:100%;height:100%;">
+            </iframe>
+        </div>
+    </section>
+
+
+    <!-- MINI PLAYER -->
+    <div id="mini-player">
+        <button onclick="hideMiniPlayer()">⛌</button>
+        <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
+                title="Mini Video Player"
                 frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen
-                style="position:absolute;top:0;left:0;width:100%;height:100%;">
-                </iframe>
-                </div>
-        </section>
-    </body>
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+        </iframe>
+    </div>
+
+    <!-- BUTTON TO RESTORE MINI PLAYER -->
+    <button id="restore-button" onclick="showMiniPlayer()">▶</button>
+
+    <!-- JS CONTROL -->
+    <script>
+        function hideMiniPlayer() {
+            document.getElementById("mini-player").style.display = "none";
+            document.getElementById("restore-button").style.display = "block";
+        }
+
+        function showMiniPlayer() {
+            document.getElementById("mini-player").style.display = "block";
+            document.getElementById("restore-button").style.display = "none";
+        }
+    </script>
+
+</body>
 </html>
