--- a/index.html
+++ b/index.html
@@ -80,6 +80,48 @@
             color: yellow;
         }
 
+        footer {
+    background-color: #1a1a1a;
+    color: #ccc;
+    padding: 20px 0;
+    text-align: center;
+    margin-top: 50px;
+    box-shadow: 0 -5px 10px rgba(0,0,0,0.4);
+}
+
+.footer-content {
+    max-width: 1000px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer-content p {
+    margin: 0;
+    font-size: 14px;
+}
+
+.social-icons {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.social-icons a img {
+    width: 24px;
+    height: 24px;
+    filter: brightness(1.2);
+    transition: transform 0.3s ease, filter 0.3s ease;
+}
+
+.social-icons a:hover img {
+    transform: scale(1.2);
+    filter: brightness(2);
+}
+
+
         /* MINI PLAYER */
         #mini-player {
             position: fixed;
@@ -234,6 +276,29 @@
             document.getElementById("restore-button").style.display = "none";
         }
     </script>
+<footer>
+    <div class="footer-content">
+        <p>This work by <strong>SamuraiBread</strong> is licensed under 
+            <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" style="color: #ccc; text-decoration: underline;">
+                CC BY-NC 4.0
+            </a>
+        </p>
+        <div class="social-icons">
+            <a href="https://discord.gg/your-link" target="_blank" title="Discord">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/discord.svg" alt="Discord">
+            </a>
+            <a href="https://youtube.com/@HiraethSMP" target="_blank" title="YouTube">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/youtube.svg" alt="YouTube">
+            </a>
+            <a href="https://tiktok.com/@yourusername" target="_blank" title="TikTok">
+                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/tiktok.svg" alt="TikTok">
+            </a>
+        </div>
+        <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" title="Creative Commons BY-NC 4.0">
+            <img style="margin-top: 10px; height: 30px;" src="https://licensebuttons.net/l/by-nc/4.0/88x31.png" alt="Creative Commons License">
+        </a>
+    </div>
+</footer>
 
 </body>
 </html>
