--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <title>Samurai's Little Corner</title>
     <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Samurai's Little Corner" />
+    <meta property="og:description" content="Addon creator, map designer, and server owner sharing free Minecraft addons, stories, and server info." />
+    <meta property="og:url" content="https://twoja-domena.pl" />
+    <meta property="og:image" content="https://twoja-domena.pl/images/logo.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Samurai's Little Corner" />
+    <meta name="twitter:description" content="Addon creator, map designer, and server owner sharing free Minecraft addons, stories, and server info." />
+    <meta name="twitter:image" content="https://twoja-domena.pl/images/logo.png" />
+
 
     <style>
         html {
@@ -87,7 +100,7 @@
     text-align: center;
     margin-top: 50px;
     box-shadow: 0 -5px 10px rgba(0,0,0,0.4);
-}
+    }
 
 .footer-content {
     max-width: 1000px;
@@ -207,98 +220,97 @@
             }
         }
     </style>
-</head>
-<body>
+    </head>
+    <body>
 
     <header>
         <img src="./Images/logo.png" alt="SamuraiBread's Little Corner">
     </header>
 
-    <nav>
-        <a href="#Start">Home Page</a>
-        <a href="#Server">Server</a>
-        <a href="#Addons">Addons</a>
-        <a href="#LatestVideo">Latest Video</a>
-        <a href="#MyStories">My Stories</a>
-    </nav>
+        <nav>
+            <a href="#Start">Home Page</a>
+            <a href="#Server">Server</a>
+            <a href="#Addons">Addons</a>
+            <a href="#LatestVideo">Latest Video</a>
+            <a href="#MyStories">My Stories</a>
+        </nav>
     <h1 style="text-align: center;">Start</h1>
-    <section id="Start">
-        <h1>About</h1>
-        <p>Hello there!<br>I'm <a href="https://en.namemc.com/profile/SamuraiBread.1" target="_blank" style="text-decoration: none;">SamuraiBread</a> — an addon creator, map designer, and server owner. I love writing spooky, sci-fi, and fantasy stories.<br>So... what is this website actually about?</p>
+        <section id="Start">
+            <h1>About</h1>
+            <p>Hello there!<br>I'm <a href="https://en.namemc.com/profile/SamuraiBread.1" target="_blank" style="text-decoration: none;">SamuraiBread</a> — an addon creator, map designer, and server owner. I love writing spooky, sci-fi, and fantasy stories.<br>So... what is this website actually about?</p>
 
-        <p>Here you'll find my own addons, server information, and even some stories I've written — all available for FREE!<br> I'm just a bit too lazy to post them right now, but hey, everything will be cool.</p>
+            <p>Here you'll find my own addons, server information, and even some stories I've written — all available for FREE!<br> I'm just a bit too lazy to post them right now, but hey, everything will be cool.</p>
 
-        <h1 id="Addons">Addons</h1>
-        <p>My addons focus on fantasy and mythical styles. In my addons, you will find ores inspired by Greek mythology, such as orichalc and adamantine. I also love Slavic mythology, so some elements of that may appear in my addons.</p>
-        <p>I enjoy chill vibes, so sometimes I add custom songs to these addons. Occasionally, I rewrite the music system based on the in-game scoreboard, allowing you to adjust it via simple commands. For example: <a class="highlighted-text">/scoreboard players set @s music_vol 1</a> (this sets the music volume to 10%).</p>
+            <h1 id="Addons">Addons</h1>
+            <p>My addons focus on fantasy and mythical styles. In my addons, you will find ores inspired by Greek mythology, such as orichalc and adamantine. I also love Slavic mythology, so some elements of that may appear in my addons.</p>
+            <p>I enjoy chill vibes, so sometimes I add custom songs to these addons. Occasionally, I rewrite the music system based on the in-game scoreboard, allowing you to adjust it via simple commands. For example: <a class="highlighted-text">/scoreboard players set @s music_vol 1</a> (this sets the music volume to 10%).</p>
 
-        <h1 id="Server">Server</h1>
-        <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become its new replacement. The story, server itself and addon are still under development.</p>
-    </section>
-        <section id="LatestVideo">
-        <h1>Latest Video</h1>
-        <p>Check out our latest Timelapse for HiraethSMP!</p>
-        <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
-            <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
-                    title="Tree Building Timelapse. (IDK why but that's cool) | HiraethSMP"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                    allowfullscreen
-                    style="position:absolute;top:0;left:0;width:100%;height:100%;">
-            </iframe>
-        </div>
-    </section>
+            <h1 id="Server">Server</h1>
+            <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become its new replacement. The story, server itself and addon are still under development.</p>
+        </section>
+            <section id="LatestVideo">
+                <h1>Latest Video</h1>
+                <p>Check out our latest Timelapse for HiraethSMP!</p>
+                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
+                    <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
+                            title="Tree Building Timelapse. (IDK why but that's cool) | HiraethSMP"
+                            frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                            allowfullscreen
+                            style="position:absolute;top:0;left:0;width:100%;height:100%;">
+                    </iframe>
+                </div>
+            </section>
 
 
-    <!-- MINI PLAYER -->
-    <div id="mini-player">
-        <button onclick="hideMiniPlayer()">⛌</button>
-        <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
-                title="Mini Video Player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-        </iframe>
-    </div>
+            <!-- MINI PLAYER -->
+            <div id="mini-player">
+                <button onclick="hideMiniPlayer()">⛌</button>
+                <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
+                        title="Mini Video Player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen>
+                </iframe>
+            </div>
 
-    <!-- BUTTON TO RESTORE MINI PLAYER -->
-    <button id="restore-button" onclick="showMiniPlayer()">▶</button>
+            <!-- BUTTON TO RESTORE MINI PLAYER -->
+            <button id="restore-button" onclick="showMiniPlayer()">▶</button>
 
-    <!-- JS CONTROL -->
-    <script>
-        function hideMiniPlayer() {
-            document.getElementById("mini-player").style.display = "none";
-            document.getElementById("restore-button").style.display = "block";
-        }
-
-        function showMiniPlayer() {
-            document.getElementById("mini-player").style.display = "block";
-            document.getElementById("restore-button").style.display = "none";
-        }
-    </script>
-<footer>
-    <div class="footer-content">
-        <p>This work by <strong>SamuraiBread</strong> is licensed under 
-            <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" style="color: #ccc; text-decoration: underline;">
-                CC BY-NC 4.0
-            </a>
-        </p>
-        <div class="social-icons">
-            <a href="https://discord.gg/your-link" target="_blank" title="Discord">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/discord.svg" alt="Discord">
-            </a>
-            <a href="https://youtube.com/@HiraethSMP" target="_blank" title="YouTube">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/youtube.svg" alt="YouTube">
-            </a>
-            <a href="https://tiktok.com/@yourusername" target="_blank" title="TikTok">
-                <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/tiktok.svg" alt="TikTok">
-            </a>
-        </div>
-        <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" title="Creative Commons BY-NC 4.0">
-            <img style="margin-top: 10px; height: 30px;" src="https://licensebuttons.net/l/by-nc/4.0/88x31.png" alt="Creative Commons License">
-        </a>
-    </div>
-</footer>
-
-</body>
+            <!-- JS CONTROL -->
+            <script>
+                function hideMiniPlayer() {
+                    document.getElementById("mini-player").style.display = "none";
+                    document.getElementById("restore-button").style.display = "block";
+                }
+            
+                function showMiniPlayer() {
+                    document.getElementById("mini-player").style.display = "block";
+                    document.getElementById("restore-button").style.display = "none";
+                }
+            </script>
+        <footer>
+            <div class="footer-content">
+                <p>This work by <strong>SamuraiBread</strong> is licensed under 
+                    <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" style="color: #ccc; text-decoration: underline;">
+                        CC BY-NC 4.0
+                    </a>
+                </p>
+                <div class="social-icons">
+                    <a href="" target="_blank" title="Discord">
+                        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/discord.svg" alt="Discord">
+                    </a>
+                    <a href="https://youtube.com/@HiraethSMP" target="_blank" title="YouTube">
+                        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/youtube.svg" alt="YouTube">
+                    </a>
+                    <a href="" target="_blank" title="TikTok">
+                        <img src="https://cdn.jsdelivr.net/npm/simple-icons@v10/icons/tiktok.svg" alt="TikTok">
+                    </a>
+                </div>
+                <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank" rel="license" title="Creative Commons BY-NC 4.0">
+                    <img style="margin-top: 10px; height: 30px;" src="https://licensebuttons.net/l/by-nc/4.0/88x31.png" alt="Creative Commons License">
+                </a>
+            </div>
+        </footer>
+    </body>
 </html>
