--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 <html lang="en">
     <head>
     <title>Samurai's Little Corner</title>
+    <link rel="icon" href="./Images/tab_logo.png" type="icon">
+
     <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Samurai's Little Corner" />
     <meta property="og:description" content="Addon creator, map designer, and server owner sharing free Minecraft addons, stories, and server info." />
-    <meta property="og:url" content="https://twoja-domena.pl" />
-    <meta property="og:image" content="https://twoja-domena.pl/images/logo.png" />
+    <meta property="og:url" content="https://samuraibreadofficial.github.io" />
+    <meta property="og:image" content="https://samuraibreadofficial.github.io/Images/logo.png" />
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Samurai's Little Corner" />
     <meta name="twitter:description" content="Addon creator, map designer, and server owner sharing free Minecraft addons, stories, and server info." />
-    <meta name="twitter:image" content="https://twoja-domena.pl/images/logo.png" />
+    <meta name="twitter:image" content="https://samuraibreadofficial.github.io/Images/logo.png" />
 
 
     <style>
