--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
     <title>Samurai's Little Corner</title>
-    <link rel="icon" href="Images/tab_logo.png" type="image/png">
+    <link rel="icon" href="./images/tab_logo.png" type="image/png">
 
     <meta name="google-site-verification" content="UNJBc2-4umEdROT98HuAU8BNavkqnlpyv0f2Xv4BERY" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
