--- a/index.html
+++ b/index.html
@@ -190,6 +190,22 @@
             background-color: #444;
         }
 
+        #button {
+            background-color: #342f43;
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            border-radius: 5px;
+            cursor: pointer;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+            transition: background-color 0.3s ease;
+        }
+
+        #button:hover {
+            background-color: #444;
+        }
+
         @media (max-width: 600px) {
             section {
                 padding: 20px 15px;
@@ -230,67 +246,16 @@
     </header>
 
         <nav>
-            <a href="#Start">Home Page</a>
-            <a href="#Server">Server</a>
-            <a href="#Addons">Addons</a>
-            <a href="#LatestVideo">Latest Video</a>
-            <a href="#MyStories">My Stories</a>
+            <a href="#Start">New Website</a>
         </nav>
     <h1 style="text-align: center;">Start</h1>
         <section id="Start">
             <h1>About</h1>
-            <p>Hello there!<br>I'm <a href="https://en.namemc.com/profile/SamuraiBread.1" target="_blank" style="text-decoration: none;">SamuraiBread</a> — an addon creator, map designer, and server owner. I love writing spooky, sci-fi, and fantasy stories.<br>So... what is this website actually about?</p>
-
-            <p>Here you'll find my own addons, server information, and even some stories I've written — all available for FREE!<br> I'm just a bit too lazy to post them right now, but hey, everything will be cool.</p>
-
-            <h1 id="Addons">Addons</h1>
-            <p>My addons focus on fantasy and mythical styles. In my addons, you will find ores inspired by Greek mythology, such as orichalc and adamantine. I also love Slavic mythology, so some elements of that may appear in my addons.</p>
-            <p>I enjoy chill vibes, so sometimes I add custom songs to these addons. Occasionally, I rewrite the music system based on the in-game scoreboard, allowing you to adjust it via simple commands. For example: <a class="highlighted-text">/scoreboard players set @s music_vol 1</a> (this sets the music volume to 10%).</p>
-
-            <h1 id="Server">Server</h1>
-            <p>I am currently working on HiraethSMP. A world where god dies and those who touch the devine stone will become its new replacement. The story, server itself and addon are still under development.</p>
+            <h2>Click the button below to travel to the new website.</h2>
+            <div><button href="https://samuraibreadofficial.github.io/newweb/" id="button" target="_blank" style="color: #ccc; text-decoration: underline;">Go to New Website</button></div>
         </section>
-            <section id="LatestVideo">
-                <h1>Latest Video</h1>
-                <p>Check out our latest Timelapse for HiraethSMP!</p>
-                <div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;max-width:100%;border-radius:10px;box-shadow: 5px 5px 5px #342f43;">
-                    <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
-                            title="Tree Building Timelapse. (IDK why but that's cool) | HiraethSMP"
-                            frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                            allowfullscreen
-                            style="position:absolute;top:0;left:0;width:100%;height:100%;">
-                    </iframe>
-                </div>
-            </section>
 
 
-            <!-- MINI PLAYER -->
-            <div id="mini-player">
-                <button onclick="hideMiniPlayer()">⛌</button>
-                <iframe src="https://www.youtube.com/embed/Yx8as2HKqWU"
-                        title="Mini Video Player"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen>
-                </iframe>
-            </div>
-
-            <!-- BUTTON TO RESTORE MINI PLAYER -->
-            <button id="restore-button" onclick="showMiniPlayer()">▶</button>
-
-            <!-- JS CONTROL -->
-            <script>
-                function hideMiniPlayer() {
-                    document.getElementById("mini-player").style.display = "none";
-                    document.getElementById("restore-button").style.display = "block";
-                }
-            
-                function showMiniPlayer() {
-                    document.getElementById("mini-player").style.display = "block";
-                    document.getElementById("restore-button").style.display = "none";
-                }
-            </script>
         <footer>
             <div class="footer-content">
                 <p>This work by <strong>SamuraiBread</strong> is licensed under 
