Update button in index.html to use onclick for navigation to new website

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <section id="Start">
             <h1>About</h1>
             <h2>Click the button below to travel to the new website.</h2>
-            <div><button href="./newweb/index.html" id="button" target="_blank" style="color: #ccc; text-decoration: underline;">Go to New Website</button></div>
+            <div><button onclick="window.location.href='./newweb/index.html'" id="button" target="_blank" style="color: #ccc; text-decoration: underline;">Go to New Website</button></div>
         </section>
 
 
