Add contact nac

--- a/newweb/index.html
+++ b/newweb/index.html
@@ -15,7 +15,9 @@
             <a href="./index.html">Home</a>
             <a href="./skins.html">Skins</a>
             <a href="./addons.html">Addons</a>
+            <a href="./models.html">Models</a>
             <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
     </nav>
     <section>
         <h2>Welcome to Official Website of SamuraiBread's Work!</h2>
